Note python3 must be in the path for the Makefile to work.

--- a/src/web/download.html
+++ b/src/web/download.html
@@ -14,6 +14,9 @@ python 3.1 or better
 ocaml 3.12 or better
 g++ 4.1 or better OR clang 3.0 
 </pre>
+Note you must have <code>python3</code> on your path 
+for the Makefile to work.
+<p>
 Felix builds on Linux,BSD and OSX. It builds on Windows using MSVC++ as
 well. For Windows specific build instructions see <a href="./win.fdoc">here</a>.
 For BSD specific build instructions see the &quot;Installing Felix: POSIX (BSD)&quot; section of the INSTALL File located in the top level of the felix source distrobution
